--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ li {display: inline; list-style-type: none;}
     float: left;
     height: 150px;
     width: 160px;
+    border-raidus:25px;
 }
 
 .i-info {
@@ -309,8 +310,8 @@ a, a:hover, .tmblr-iframe, .tmblr-iframe:hover, #container {
     
     <div id="h-links">
         <a href="https://seanchas.tumblr.com/">home.</a>
-        <a href="https://seanchas.tumblr.com/ask">ask.</a>
-        <a href="https://seanchas.tumblr.com/archive">archive.</a>
+        <a href="https://seanchasmuses.github.io/rules">rules.</a>
+        <a href="https://seanchasmuses.github.io/">muses.</a>
     </div>
     
 </div>
