Typo fix index.html
I was too confident in my ability to spell the word radius.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ li {display: inline; list-style-type: none;}
     float: left;
     height: 150px;
     width: 160px;
-    border-raidus:25px;
+    border-radius:25px;
 }
 
 .i-info {
