--- a/knives.html
+++ b/knives.html
@@ -20,7 +20,7 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
 <title>seanchas / (character name)</title> <!-- page title -->
 
 <link rel="shortcut icon" href="https://img.nickpic.host/6ktOPb.jpg">
-
+<link rel="stylesheet" href="character.css">
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,700,700i|Raleway:400,400i,700,700i|Rubik:400,400i,700,700i" rel="stylesheet">
 
