--- a/knives.html
+++ b/knives.html
@@ -20,7 +20,7 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
 <title>seanchas / (character name)</title> <!-- page title -->
 
 <link rel="shortcut icon" href="https://img.nickpic.host/6ktOPb.jpg">
-<link rel="stylesheet" href="character.css">
+
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,700,700i|Raleway:400,400i,700,700i|Rubik:400,400i,700,700i" rel="stylesheet">
 
@@ -90,11 +90,8 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
 
 <div class="content">
 
-  <div class="quick-box">
-    <div class="char-avatar">
-     <img src="https://img.nickpic.host/6k4rHD.png"/>
-    </div>
-    <div class="quick-stats">
+     <img class="char-avatar" src="https://img.nickpic.host/6k4rHD.png"/>
+
       <b>Name:</b> Knives Millions
       <br/>
       <b>Aliases:</b> N/a
@@ -106,8 +103,6 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
       <b>Species:</b> Plant
       <br/><br/>
       <b>Source:</b> Trigun <i>(Manga)</i>
-    </div>
-  </div>
 
   
   <h1 id="synopsis">Synopsis.</h1>
