--- a/test.html
+++ b/test.html
@@ -97,7 +97,44 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
 
 <div class="content">
 
-    words will go here
+<div class="quick-box">
+    <div class="char-avatar">
+     <img class="char-avatar" src="https://img.nickpic.host/6k4rHD.png"/>
+    </div>
+    <div class="quick-stats">
+      <b>Name:</b> Knives Millions
+      <br/>
+      <b>Aliases:</b> N/a
+      <br/>
+      <b>Age:</b> 156; 20s, physically.
+      <br/>
+      <b>Gender:</b> Non-Binary <i>(He/Him)</i>
+      <br/>
+      <b>Species:</b> Plant
+      <br/><br/>
+      <b>Source:</b> Trigun <i>(Manga)</i>
+    </div>
+  </div>
+
+  
+  <h1 id="synopsis">Synopsis.</h1>
+  
+     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet finibus risus, at vehicula felis rutrum in. Proin aliquam id eros eget egestas. Donec bibendum, nisl ac tincidunt varius, mauris dui ornare sem, volutpat maximus neque diam malesuada sapien. Duis pellentesque faucibus elit. Ut erat massa, malesuada sed arcu vitae, mollis hendrerit sapien. Donec a est et quam ultricies ornare. Praesent pulvinar interdum tellus sed iaculis. Integer ac nibh ullamcorper, vehicula magna in, commodo lorem. In vulputate velit et mollis interdum. Quisque nulla leo, consequat a convallis in, fermentum eget sem. Sed ut lectus quis lectus sagittis posuere. Aenean bibendum et tellus sed tincidunt. Duis interdum nunc et augue feugiat aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque leo, euismod sit amet nisl sed, accumsan efficitur sem. Mauris nulla orci, tempor a justo eget, tempus dignissim libero.</p>
+  
+  
+  <h1 id="notes">Notes.</h1>
+  
+     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet finibus risus, at vehicula felis rutrum in. Proin aliquam id eros eget egestas. Donec bibendum, nisl ac tincidunt varius, mauris dui ornare sem, volutpat maximus neque diam malesuada sapien. Duis pellentesque faucibus elit. Ut erat massa, malesuada sed arcu vitae, mollis hendrerit sapien. Donec a est et quam ultricies ornare. Praesent pulvinar interdum tellus sed iaculis. Integer ac nibh ullamcorper, vehicula magna in, commodo lorem. In vulputate velit et mollis interdum. Quisque nulla leo, consequat a convallis in, fermentum eget sem. Sed ut lectus quis lectus sagittis posuere. Aenean bibendum et tellus sed tincidunt. Duis interdum nunc et augue feugiat aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque leo, euismod sit amet nisl sed, accumsan efficitur sem. Mauris nulla orci, tempor a justo eget, tempus dignissim libero.</p>
+  
+  
+  <h1 id="hooks">Hooks.</h1>
+  
+     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet finibus risus, at vehicula felis rutrum in. Proin aliquam id eros eget egestas. Donec bibendum, nisl ac tincidunt varius, mauris dui ornare sem, volutpat maximus neque diam malesuada sapien. Duis pellentesque faucibus elit. Ut erat massa, malesuada sed arcu vitae, mollis hendrerit sapien. Donec a est et quam ultricies ornare. Praesent pulvinar interdum tellus sed iaculis. Integer ac nibh ullamcorper, vehicula magna in, commodo lorem. In vulputate velit et mollis interdum. Quisque nulla leo, consequat a convallis in, fermentum eget sem. Sed ut lectus quis lectus sagittis posuere. Aenean bibendum et tellus sed tincidunt. Duis interdum nunc et augue feugiat aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque leo, euismod sit amet nisl sed, accumsan efficitur sem. Mauris nulla orci, tempor a justo eget, tempus dignissim libero.</p>
+  
+  
+  <h1 id="verses">Verses.</h1>
+  
+  <p><h2>Default</h2></p>
     
 </div>
 
