--- a/rules.html
+++ b/rules.html
@@ -33,7 +33,7 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
 
 <script src="https://unpkg.com/phosphor-icons"></script>
 
-<link rel="stylesheet" href="character.css">
+<link rel="stylesheet" href="character/character.css">
     
 </head>
 
@@ -98,9 +98,9 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
 <div class="content">
 
 <ol>
-  <li><b>This is the rule where I ask you to follow general RP etiquette.</b> I consider this blog <i>Selective & Open</i>, which means that I don't always follow back, but non-mutuals are invited and encouraged to send memes, asks or IMs. Nine times out of ten, the reason why I don't follow back is social anxiety so sending a message first helps break that tension! I'm also OC & duplicate friendly. Basically, if you're not a bigot or a creep I'm open to discussions.</li>
+  <li><b>This is the rule where I ask you to follow general RP etiquette.</b> I consider this blog <i>Selective & Open</i>, which means that I don't always follow back, but non-mutuals are invited and encouraged to send memes, asks or IMs. Nine times out of ten, the reason why I don't follow back is social anxiety so sending a message first helps break that tension! I'm also OC & duplicate friendly.</li>
 
-  <li><b>Common triggers will be tagged to the best of my abilities.</b> Personally, I struggle with subjects involving unreality or depersonalization, and just ask that you give me a warning before it comes up in any of our threads.</li>
+  <li><b>Common triggers will be tagged to the best of my abilities.</b> Personally, I struggle with subjects involving unreality or depersonalization, and just ask that you give me a warning before it comes up in any of our threads. If I forget to tag something, or you need something specific tagged, please let me know!</li>
 
   <li><b>Shipping ultimately comes down to chemistry and is limited to one ship per verse.</b> It's not something I set out to do, but I welcome it when it happens. I do not write explicitly sexual subjects and will always employ the use of fade-to-black.</li>
 
