--- a/rules.html
+++ b/rules.html
@@ -19,7 +19,7 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
  
 <head>
  
-<title>seanchas / muse list</title> <!-- page title -->
+<title>seanchas / rules</title> <!-- page title -->
 
 <link rel="shortcut icon" href="https://img.nickpic.host/6ktOPb.jpg">
 
