--- a/character/knives.html
+++ b/character/knives.html
@@ -90,8 +90,11 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
 
 <div class="content">
 
-     <img class="char-avatar" src="https://img.nickpic.host/6k4rHD.png"/>
-
+  <div class="quick-box">
+    <div class="char-avatar">
+     <img src="https://img.nickpic.host/6k4rHD.png"/>
+    </div>
+    <div class="quick-stats">
       <b>Name:</b> Knives Millions
       <br/>
       <b>Aliases:</b> N/a
@@ -103,6 +106,8 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
       <b>Species:</b> Plant
       <br/><br/>
       <b>Source:</b> Trigun <i>(Manga)</i>
+    </div>
+  </div>
 
   
   <h1 id="synopsis">Synopsis.</h1>
