--- a/character/knives.html
+++ b/character/knives.html
@@ -2,6 +2,8 @@
 
 <html>
 
+<!-- RASPBERRY SORBET | THEME BY BONES | NUCLEARSTORMS -->
+
 <!--
 
 >> CREDITS
@@ -17,15 +19,22 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
  
 <head>
  
-<title>seanchas / (character name)</title> <!-- page title -->
+<title>seanchas / knives</title> <!-- page title -->
 
 <link rel="shortcut icon" href="https://img.nickpic.host/6ktOPb.jpg">
-<link rel="stylesheet" href="character.css">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!-- fonts -->
+
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,700,700i|Raleway:400,400i,700,700i|Rubik:400,400i,700,700i" rel="stylesheet">
 
 <!-- icons -->
+
 <script src="https://unpkg.com/phosphor-icons"></script>
+
+<link rel="stylesheet" href="character/character.css">
+    
 </head>
 
 <body>
@@ -51,7 +60,7 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
     </div>
     
 </div>
-  
+
   <!-- buttons -->
 
 <div id="btncontainer">
@@ -128,7 +137,6 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
   <h1 id="verses">Verses.</h1>
   
   <p><h2>Default</h2></p>
-
 </div>
 
 </div>
