--- a/character/knives.html
+++ b/character/knives.html
@@ -33,7 +33,7 @@ This page is a heavily edited version of Bones' Raspberry Sorbet theme that I us
 
 <script src="https://unpkg.com/phosphor-icons"></script>
 
-<link rel="stylesheet" href="character/character.css">
+<link rel="stylesheet" href="character.css">
     
 </head>
 
